[gd_scene load_steps=5 format=3 uid="uid://dlbhovwlbafwv"]

[ext_resource type="Script" path="res://projector.gd" id="1_5fpg2"]
[ext_resource type="Texture2D" uid="uid://5xs3axk45y3y" path="res://assets/Spotlight_cone3.png" id="2_0m13w"]
[ext_resource type="Texture2D" uid="uid://d2udtksb0d3u" path="res://assets/Spotlight_coneback.png" id="3_rnykn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xb1cs"]
size = Vector2(50, 800)

[node name="Projector" type="Area2D"]
script = ExtResource("1_5fpg2")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-1, 385)
texture = ExtResource("2_0m13w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 386.75)
shape = SubResource("RectangleShape2D_xb1cs")

[node name="SpotlightConeback" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-1, 385)
texture = ExtResource("3_rnykn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
